--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<dependency> 
-			<groupId>javax.persistence</groupId>   
+		<dependency>
+			<groupId>javax.persistence</groupId>
 			<artifactId>javax.persistence-api</artifactId>
 			<version>2.2</version>
 		</dependency>
@@ -55,6 +55,13 @@
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.0.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
